# docopt-parser

./: .flake8  .gitignore  docopt-ref-bugs.txt  naval_fate.txt  parse.py  pyproject.toml  run.py
.devcontainer/: devcontainer.json  post.sh
.github/workflows/: release.yaml  test.yaml
docopt_parser/: __init__.py  __main__.py  ast.py  doc.py  errors.py  groups.py  helpers.py  marked.py  marks.py  optimize.py  options.py  parsec.py  parser.py  parser_utils.py  parsers.py  parsita-parser.py  post_processors.py  usage.py  validate.py
docopt_parser/base/: __init__.py  astelement.py  astgroup.py  astleaf.py  astnode.py  group.py  identnode.py  leaf.py  node.py  option.py
docopt_parser/elements/: __init__.py  argument.py  argumentseparator.py  command.py  documented_option.py  long.py  options_shortcut.py  repeatable.py  short.py  text.py
docopt_parser/groups/: __init__.py  choice.py  group.py  option_list.py  optional.py  parsers.py  sequence.py
docopt_parser/leaves/: __init__.py  argument.py  argumentseparator.py  command.py  documented_option.py  long.py  option.py  option_ref.py  options_shortcut.py  repeatable.py  short.py  text.py
docopt_parser/nodes/: __init__.py  argument.py  argumentseparator.py  astleaf.py  astnode.py  choice.py  command.py  doc.py  docoptast.py  group.py  identnode.py  long.py  multiple.py  option.py  optional.py  optionlist.py  optionref.py  options_section.py  options_shortcut.py  sequence.py  short.py  usage_section.py
docopt_parser/nodes/usage/: argumentseparator.py  atom.py  choice.py  command.py  group.py  multiple.py  optional.py  optionlist.py  optionref.py  options.py  optionsshortcut.py  sequence.py  usage.py
docopt_parser/sections/: __init__.py  options.py  usage.py
docopt_parser/util/: marks.py  parsers.py  post_processors.py
tests/: __init__.py  conftest.py  docopt-parser-usecases.txt  docopt.py  lang.py  test_parser.py  test_something.py  test_usecases.py  test_validation.py
