[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "docopt-parser"
version = "0.0.0-dev"
description = "A parser for the docopt language"
authors = [
  "Anders Ingemann <anders@ingemann.de>"
]
homepage = "https://github.com/andsens/docopt-parser"
repository = "https://github.com/andsens/docopt-parser"
readme = "README.adoc"
packages = [
  { include = "docopt_parser" },
]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
termcolor = "^1.1.0"
parsec = "^3.13"
pyyaml = "^6.0"
typing_extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.0"
pytest = "^7.1.1"
pytest-xdist = "^2.5.0"
pytest-flake8 = "^1.1.1"
hypothesis = "^6.39.4"

[tool.poetry.scripts]
docopt-parser = "docopt_parser.__main__:main"

# [tool.poetry.sdist]
# include = ["docopt_parser/version.py"]
# exclude = ["tests", "pytest.ini", ".*"]
